[package]
name = "audio-capture"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
cpal = "0.16.0"
crossterm = "0.29.0"
ctrlc = "3.5.0"
itertools = "0.14.0"
pipewire = { version = "0.9.2", features = ["v0_3_44"] }
ringbuf = "0.4.8"
rustfft = "6.4.1"
